made it responsive

--- a/index.html
+++ b/index.html
@@ -28,20 +28,17 @@
           <li class="list-item">Blog</li>
         </ul>
         <button class="trial-btn">FREE TRIAL</button>
+        <img src="./images/nav-icon.png" alt="ham" class="ham" />
       </nav>
 
       <!-- HERO -->
       <div class="hero-main">
         <div class="hero-content">
-          <h1>
-            Codext one of <br />
-            the best system <br />
-            in SAAS
-          </h1>
+          <h1>Codext one of the best system in SAAS</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br />
-            Corrupti hic, ipsa, autem enim in mollitia vero <br />
-            obcaecati cupiditate velit, quod porro voluptas!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
+            hic, ipsa, autem enim in mollitia vero obcaecati cupiditate velit,
+            quod porro voluptas!
           </p>
         </div>
         <img
